fixes on carousel width, gap and left margin

--- a/src/styles/legal.module.css
+++ b/src/styles/legal.module.css
@@ -43,7 +43,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    gap: 1.5em;
+    gap: 1em;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-padding: 0 24px;
@@ -67,7 +67,7 @@
     border-radius: 10px;
     gap: .5em;
     width: 80vw;
-    max-width: 300px;
+    max-width: 290px;
     /*height: auto;*/
     overflow: hidden;
 }
